# marketing-crew

./: .env  README.md  crew.py  pyproject.toml
config/: agents.yaml
