[project]
name = "marketing-crew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai[tools]>=0.201.1",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "notebook>=7.4.7",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
