[project]
name = "marketing-crew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai-tools>=0.75.0",
    "crewai[tools]>=0.201.1",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "notebook>=7.4.7",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
